ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Protected/Protected4/input.ts.stderr
error: Unexpected token `m`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Protected/Protected4/input.ts:2:20
  |
2 |   protected public m() { }
  |                    ^

